lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:11: error: type mismatch;
 found   : Array[lessons.lander.universe.Point]
 required: Array[Int]
	return Segment
               ^